[BUGFIX #2946] not showing failed icon
* Missing styles for failure icon added

--- a/public/stylesheets/links.css
+++ b/public/stylesheets/links.css
@@ -115,6 +115,10 @@ a.icon span { display: none; }
   background: url(images/icons/success.png) transparent center center no-repeat;
 }
 
+.icon.failed {
+  background: url(images/icons/failure.png) transparent center center no-repeat;
+}
+
 .icon.add {
   background: url(images/icons/add.png) transparent center center no-repeat;
 }
